--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,9 @@ Thumbs.db
 *.tar
 *.zip
 
+# ignore distributables
+dist
+
 # -------------------------
 # BEGIN Whitelisted Files
 # -------------------------
